Hent fullmakt fra representasjon (#341)
* Laget client til kilde representasjon
Co-authored-by: klaramargrethehelgemo <klara.margrethe.helgemo@nav.no>

* Hentet responsen til representajonen sin fullmakt apiet i person service klassen

* Small fix

* Added mock bean for representasjonFullmakt class

* byttet log med securelog

* kaller representasjon fullmakt over pdl fullmakt for å teste

* Endret scope til fullmakt av representasjon

* La personident i request body til api

* Rettet data type i  responsen til fullmakt representasjon

* Fikset build feil

* La endepunkt til reprersentajon fullmakt

* La secure logs til fullmakt endepunkt

* Flettet beskrivelse til område i fullmakt instans

* Fjernet felt status av FullmaktData

* Endret navn til fullmakt api og fullmakt DTO klass

---------

Co-authored-by: Sneha Desai <sneha.desai@gmail.com>
Co-authored-by: Dragutin Vujovic <dragutin.vujovic@nav.no>